@@ -1,3 +1,5 @@
+HEAD
+	+ Forbid use of loopback address as forwarder
 4.1
 	+ Remove external AD integration
 4.0.2
